force-app/main/default/objects/Location_Home__dlm/fields/City_c__c.field-meta.xml
<CustomField>
    <fullName>City_c__c</fullName>
    <label>City</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>City</labelOverride>
        <masterLabel>City</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>