force-app/main/default/objects/Location_Home__dlm/fields/Competitor_Density_c__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Density_c__c</fullName>
    <label>Competitor Density</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Competitor Density</labelOverride>
        <masterLabel>Competitor Density</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>