force-app/main/default/objects/Location_Home__dlm/fields/Demand_Score_c__c.field-meta.xml
<CustomField>
    <fullName>Demand_Score_c__c</fullName>
    <label>Demand Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Demand Score</labelOverride>
        <masterLabel>Demand Score</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>