force-app/main/default/objects/Location_Home__dlm/fields/Estimated_Setup_Cost_c__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Setup_Cost_c__c</fullName>
    <label>Estimated Setup Cost</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Estimated Setup Cost</labelOverride>
        <masterLabel>Estimated Setup Cost</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>