force-app/main/default/objects/Location_Home__dlm/fields/Nearest_Competitor_Distance_M_c__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Competitor_Distance_M_c__c</fullName>
    <label>Nearest Competitor Distance M</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Nearest Competitor Distance M</labelOverride>
        <masterLabel>Nearest Competitor Distance M</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>