force-app/main/default/objects/Location_Home__dlm/fields/Payback_Period_Years_c__c.field-meta.xml
<CustomField>
    <fullName>Payback_Period_Years_c__c</fullName>
    <label>Payback Period Years</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Payback Period Years</labelOverride>
        <masterLabel>Payback Period Years</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>