force-app/main/default/objects/Location_Home__dlm/fields/Projected_Revenue_c__c.field-meta.xml
<CustomField>
    <fullName>Projected_Revenue_c__c</fullName>
    <label>Projected Revenue</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Projected Revenue</labelOverride>
        <masterLabel>Projected Revenue</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>