force-app/main/default/objects/Location_Home__dlm/fields/Site_Recommendation_c__c.field-meta.xml
<CustomField>
    <fullName>Site_Recommendation_c__c</fullName>
    <label>Site Recommendation</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Site Recommendation</labelOverride>
        <masterLabel>Site Recommendation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>